kubernetes/policy/allow-internal-dns-policy-calico.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-app-policy
spec:
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name not in {"kube-system", "calico-system"}
  types:
  - Ingress
  - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        selector: k8s-app == "kube-dns"
        ports:
          - 53

  # after applying above policy, go to shell of customor pod and try to resolve google.com
  # kubectl exec -it pod/customer-5446d96c8b-95t6d -n yaobank -c customer -- /bin/bash
  # dig google.com
  # this will resolve google ip
